Feito até wrapper (video 14) prox imagens

--- a/HTML-tutorial/text style/style.css
+++ b/HTML-tutorial/text style/style.css
@@ -8,7 +8,7 @@ h1 {
     text-indent: 30px;
     text-transform: uppercase;
     color: #025321;
-    word-spacing: 20px;
+    word-spacing: 20px; /*letter-spacing: */
 }
 
 a {
