--- a/HTML-tutorial/Project/style.css
+++ b/HTML-tutorial/Project/style.css
@@ -193,8 +193,6 @@ main {
     display: table;
 }
 
-
-
 .vertical-center {
     display: flex;
     flex-direction: column;
@@ -239,7 +237,7 @@ main {
 }
 
 .index-links div {
-    margin: 15px 16px 0;
+    margin: 15px 15px 0;
     width: calc(100% - 30px);
     height: 100px;
     background-color: #111;
@@ -250,9 +248,101 @@ main {
     font-family: 'Bellefair', serif;
     font-size: 30px;
     line-height: 100px;
+    font-weight: 555;
     color: #CC7839;
     text-align: center;
     text-transform: uppercase;
+}
+
+.show-links .wrapper div {
+    margin: 15px 15px 0;
+    width: calc(100% - 34px);
+    height: 100px;
+    background-color: #111;
+    border: 2px solid rgb(128, 0, 0);
+}
+
+.show-links div p {
+    font-family: 'Bellefair', serif;
+    font-size: 25px;
+    line-height: 100px;
+    font-weight: 555;
+    color: #CC7839;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.show-links h2 {
+    font-family: 'Bellefair', serif;
+    font-size: 25px;
+    line-height: 60px;
+    font-weight: 555;
+    color: #CC7839;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.musica {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.musica h2 {
+    font-family: 'Bellefair', serif;
+    font-size: 25px;
+    line-height: 100px;
+    font-weight: 555;
+    color: #CC7839;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.musica video {
+    display: block;
+    margin: 20px auto 30px ;
+    border: 1px solid rgb(128, 0, 0);
+}
+
+.musica h3 {
+    font-family: 'Bellefair', serif;
+    font-size: 27px;
+    color: #CC7839;
+    font-weight: 555;
+    text-transform: uppercase;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.musica p {
+    font-family: 'Bellefair', serif;
+    font-size: 18px;
+    line-height: 22px;
+    color: #CC7839;
+    text-transform: uppercase;
+    height: 100%;
+    margin: 0 10px 0 10px;
+}
+
+.wrapper-desenvolvimento {
+    width: 100%;
+    height: calc(100vh - 410px);
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fonte-padrao {
+    font-family: 'Bellefair', serif;
+    font-size: 40px;
+    color: #CC7839;
+    text-transform: uppercase;
+    font-weight: 555;
+    text-align: center;
 }
 
 /*
@@ -384,10 +474,18 @@ footer ul li a {
         font-size: 28px;
         color: #CC7839;
         text-transform: uppercase;
+        font-weight: 555;
+    }
+    .show-links .wrapper div {
+        float: left;
+        width: 226px;
+        height: 226px;
+        margin: 20px 10px 0px;
     }
 
     .show-links .wrapper div p {
-        padding-top: 45%;
+        padding-top: 43%;
+        line-height: 40px;
         text-align: center;
         font-family: 'Bellefair', serif;
         font-size: 25px;
@@ -396,13 +494,6 @@ footer ul li a {
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     }
 
-    .show-links .wrapper div {
-        float: left;
-        width: 230px;
-        height: 230px;
-        margin: 20px 10px 0px;
-        
-    }
     .aces {
         background-image: url(imagens/CapaAcesHigh.jpg);
         background-repeat: no-repeat;
@@ -457,6 +548,7 @@ footer ul li a {
         font-family: 'Bellefair', serif;
         font-size: 28px;
         color: #CC7839;
+        font-weight: 555;
         text-transform: uppercase;
         text-align: center;
         padding-bottom: 30px;
@@ -466,6 +558,7 @@ footer ul li a {
         font-family: 'Bellefair', serif;
         font-size: 27px;
         color: #CC7839;
+        font-weight: 555;
         text-transform: uppercase;
         padding-bottom: 30px;
         text-align: center;
@@ -480,6 +573,25 @@ footer ul li a {
         height: 100%;
         column-count: 2;
         column-gap: 20px;
+        padding-right: 10px;
+    }
+
+    .wrapper-desenvolvimento {
+        width: 1000px;
+        height: calc(100vh - 410px);
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .fonte-padrao {
+        font-family: 'Bellefair', serif;
+        font-size: 40px;
+        color: #CC7839;
+        text-transform: uppercase;
+        font-weight: 555;
+        text-align: center;
     }
     
     .footer-links-viagens {
